--- a/index.html
+++ b/index.html
@@ -1,25 +1,197 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>ポスティングマップ</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>一致団結ポスティングマップ</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
+  <style>
+    body { font-family: sans-serif; margin: 0; padding: 0; }
+    h1 {
+      background-color: #e4007f;
+      color: white;
+      padding: 10px;
+      margin: 0;
+      font-size: 1.5em;
+    }
+    #form {
+      padding: 10px;
+      background-color: #f9f9f9;
+      border-bottom: 1px solid #ccc;
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      font-size: 0.95em;
+    }
+    #form label {
+      display: flex;
+      flex-direction: column;
+      font-weight: bold;
+    }
+    #form input {
+      margin-top: 4px;
+      padding: 4px;
+      font-size: 0.9em;
+    }
+    #map { height: 85vh; width: 100%; }
+    .leaflet-div-icon {
+      width: 6px !important;
+      height: 6px !important;
+      margin-left: -3px !important;
+      margin-top: -3px !important;
+      border-radius: 3px !important;
+      border: 2px solid #e4007f !important;
+      background: #fff !important;
+    }
+  </style>
 </head>
 <body>
-  <h1>ポスティングマップ</h1>
-  <div id="map"></div>
-
-  <!-- 入力フォーム -->
-  <div id="info-form" class="hidden">
-    <label>実施日（必須）:<input type="date" id="date" required /></label>
-    <label>名前（任意）:<input type="text" id="name" /></label>
-    <button onclick="savePolygonData()">保存</button>
-    <button onclick="cancelEdit()">キャンセル</button>
+  <h1>一致団結ポスティングマップ</h1>
+  <div id="form">
+    <label>実施日（必須）
+      <input type="date" id="date" required />
+    </label>
+    <label>名前（任意）
+      <input type="text" id="name" />
+    </label>
   </div>
+  <div id="map"></div>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
+  <script>
+    // 日本語化
+    if (window.L && window.L.drawLocal) {
+      L.drawLocal.draw.toolbar.buttons.polygon = 'ポリゴンを描画';
+      L.drawLocal.draw.handlers.polygon.tooltip.start = 'クリックしてポリゴンの最初の点を指定';
+      L.drawLocal.draw.handlers.polygon.tooltip.cont = 'クリックしてポリゴンの次の点を指定';
+      L.drawLocal.draw.handlers.polygon.tooltip.end = '最初の点をクリックしてポリゴンを閉じる';
+      L.drawLocal.edit.toolbar.buttons.edit = '図形を編集';
+      L.drawLocal.edit.toolbar.buttons.remove = '図形を削除';
+    }
+    const map = L.map('map').setView([35.6996, 139.7652], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+    const drawnItems = new L.FeatureGroup().addTo(map);
 
-  <script src="script.js"></script>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=drawing&callback=initMap">
+    const drawControl = new L.Control.Draw({
+      position: 'topleft',
+      edit: { featureGroup: drawnItems },
+      draw: {
+        polygon: {
+          allowIntersection: false,
+          showArea: true,
+          shapeOptions: {
+            color: "#e4007f",
+            fillColor: "#e4007f",
+            fillOpacity: 0.4
+          },
+          icon: new L.DivIcon({
+            iconSize: new L.Point(6, 6),
+            className: 'leaflet-div-icon'
+          })
+        },
+        polyline: false,
+        rectangle: false,
+        circle: false,
+        marker: false,
+        circlemarker: false
+      }
+    });
+    map.addControl(drawControl);
+
+    // 情報管理
+    const polygonMetaMap = new Map();
+
+    // 編集中のlayerを管理
+    let editingLayer = null;
+
+    function enableEdit(layer) {
+      if (editingLayer && editingLayer !== layer) {
+        disableEdit(editingLayer);
+      }
+      editingLayer = layer;
+      drawnItems.fire('editstart');
+      layer.editing && layer.editing.enable && layer.editing.enable();
+    }
+    function disableEdit(layer) {
+      if (!layer) return;
+      layer.editing && layer.editing.disable && layer.editing.disable();
+      drawnItems.fire('editstop');
+      editingLayer = null;
+    }
+
+    // ポリゴン追加
+    map.on(L.Draw.Event.CREATED, function (e) {
+      const layer = e.layer;
+      const date = document.getElementById("date").value;
+      const name = document.getElementById("name").value;
+      if (!date) {
+        alert("実施日を入力してください");
+        return;
+      }
+      polygonMetaMap.set(layer._leaflet_id, { date, name });
+      drawnItems.addLayer(layer);
+      setupPolygonEvents(layer, date, name);
+    });
+
+    // 編集後もポップアップ内容再設定
+    map.on('draw:edited', function (e) {
+      e.layers.eachLayer(function (layer) {
+        if (polygonMetaMap.has(layer._leaflet_id)) {
+          const meta = polygonMetaMap.get(layer._leaflet_id);
+          setupPolygonEvents(layer, meta.date, meta.name);
+        }
+      });
+    });
+
+    // 編集・削除ガイド
+    map.on('draw:editstart', function() {});
+    map.on('draw:editstop', function() {});
+
+    function setupPolygonEvents(layer, date, name) {
+      // 既存のポップアップをクリア
+      layer.unbindPopup();
+      // ポップアップ内容
+      const popupContent = `<strong>実施日:</strong> ${date}<br><strong>名前:</strong> ${name || "（なし）"}`;
+
+      // マウスオーバーでポップアップ表示、マウスアウトで閉じる
+      layer.on('mouseover', function(e) {
+        layer.bindPopup(popupContent, { closeButton: false, autoPan: false }).openPopup();
+      });
+      layer.on('mouseout', function(e) {
+        layer.closePopup();
+      });
+
+      // 編集開始はクリック
+      layer.on('click', function(e) {
+        L.DomEvent.stopPropagation(e);
+        enableEdit(layer);
+      });
+
+      // ダブルクリックで削除
+      layer.on('dblclick', function(e) {
+        L.DomEvent.stopPropagation(e);
+        if (confirm("この図形を削除しますか？")) {
+          drawnItems.removeLayer(layer);
+          polygonMetaMap.delete(layer._leaflet_id);
+          if (editingLayer === layer) editingLayer = null;
+        }
+      });
+    }
+
+    drawnItems.eachLayer(function(layer) {
+      const meta = polygonMetaMap.get(layer._leaflet_id);
+      if (meta) setupPolygonEvents(layer, meta.date, meta.name);
+    });
+
+    // 地図クリックで編集終了（図形上クリック時は停止済み）
+    map.on('click', function(e) {
+      if (editingLayer) {
+        disableEdit(editingLayer);
+      }
+    });
+
   </script>
 </body>
 </html>
