--- a/index.html
+++ b/index.html
@@ -257,6 +257,66 @@
     });
     map.addControl(drawControl);
 
+    // --- ここから自動送信機能 ---
+    function getAllPolygonsGeoJSON() {
+      const polygons = [];
+      drawnItems.eachLayer(function (layer) {
+        if (layer instanceof L.Polygon) {
+          polygons.push(layer.toGeoJSON().geometry.coordinates);
+        }
+      });
+      return polygons;
+    }
+
+    async function sendPolygonsToServer() {
+      const date = document.getElementById("date").value;
+      const name = document.getElementById("name").value;
+      const polygons = getAllPolygonsGeoJSON();
+
+      if (!date) {
+        alert("実施日を入力してください");
+        return;
+      }
+      // polygon（配列）は空でも送信します（全部消したパターンにも対応）
+
+      try {
+        const res = await fetch('http://localhost:3001/api/save', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            date,
+            name,
+            polygon: polygons
+          })
+        });
+        const result = await res.json();
+        if (result.status === 'ok') {
+          console.log('スプレッドシートに保存しました');
+        } else {
+          alert('保存に失敗しました: ' + (result.error || ''));
+        }
+      } catch (error) {
+        alert('サーバーに接続できませんでした');
+      }
+    }
+
+    // ポリゴン追加時
+    map.on(L.Draw.Event.CREATED, function (e) {
+      const layer = e.layer;
+      drawnItems.addLayer(layer);
+      sendPolygonsToServer();
+    });
+
+    // ポリゴン編集時
+    map.on('draw:edited', function (e) {
+      sendPolygonsToServer();
+    });
+
+    // ポリゴン削除時
+    map.on('draw:deleted', function (e) {
+      sendPolygonsToServer();
+    });
+
     // 情報管理
     const polygonMetaMap = new Map();
 
@@ -302,22 +362,41 @@
       });
     });
 
+    // ==== ポリゴンイベント設定（スマホ2回タップ対応） ====
     function setupPolygonEvents(layer, date, name) {
       // 既存のポップアップをクリア
       layer.unbindPopup();
       const popupContent = `<strong>実施日:</strong> ${date}<br><strong>名前:</strong> ${name || "（なし）"}`;
       let isTouch = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
       if (isTouch) {
+        // タッチデバイス用：2回タップで削除
+        let lastTap = 0;
         layer.on('click', function(e) {
-          layer.bindPopup(popupContent, { closeButton: false, autoPan: true }).openPopup();
-          setTimeout(() => {
-            enableEdit(layer);
-          }, 350);
+          const now = Date.now();
+          if (now - lastTap < 300) {
+            // 2回目のタップ（ダブルタップ）
+            L.DomEvent.stopPropagation(e);
+            if (confirm("この図形を削除しますか？")) {
+              drawnItems.removeLayer(layer);
+              polygonMetaMap.delete(layer._leaflet_id);
+              if (editingLayer === layer) editingLayer = null;
+              sendPolygonsToServer(); // 削除時もサーバー送信
+            }
+            lastTap = 0;
+          } else {
+            // 1回めのタップ（編集＆ポップアップ表示）
+            layer.bindPopup(popupContent, { closeButton: false, autoPan: true }).openPopup();
+            setTimeout(() => {
+              enableEdit(layer);
+            }, 350);
+            lastTap = now;
+          }
         });
         map.on('click', function(e) {
           layer.closePopup();
         });
       } else {
+        // PC用（マウス）
         layer.on('mouseover', function(e) {
           layer.bindPopup(popupContent, { closeButton: false, autoPan: false }).openPopup();
         });
@@ -328,16 +407,17 @@
           L.DomEvent.stopPropagation(e);
           enableEdit(layer);
         });
+        // ダブルクリックで削除
+        layer.on('dblclick', function(e) {
+          L.DomEvent.stopPropagation(e);
+          if (confirm("この図形を削除しますか？")) {
+            drawnItems.removeLayer(layer);
+            polygonMetaMap.delete(layer._leaflet_id);
+            if (editingLayer === layer) editingLayer = null;
+            sendPolygonsToServer(); // 削除時もサーバー送信
+          }
+        });
       }
-      // ダブルクリックで削除
-      layer.on('dblclick', function(e) {
-        L.DomEvent.stopPropagation(e);
-        if (confirm("この図形を削除しますか？")) {
-          drawnItems.removeLayer(layer);
-          polygonMetaMap.delete(layer._leaflet_id);
-          if (editingLayer === layer) editingLayer = null;
-        }
-      });
     }
 
     drawnItems.eachLayer(function(layer) {
